--- a/views/submit.html
+++ b/views/submit.html
@@ -26,11 +26,12 @@
 	</div>
 	<div class="container main">
 		<div class="navbar" style="background:#f7f7f7 !important">
-			<a class="navbar-brand" href="#">THSCS 2013</a>
+			<a class="navbar-brand" href="/">THSCS 2013</a>
 			<ul class="nav navbar-nav">
 				<li><a href="/">Home</a></li>
 				<li class="active"><a href="/submit">Submit</a></li>
 				<li><a href="/scoreboard">Scoreboard</a></li>
+				<li><a href="/#helpbox">Help</a></li>
 			</ul>
 			<p class="navbar-text pull-right"><a href="/logout" style="text-decoration: none" class="navbar-link">Logout</a></p>
 		</div>
