Various changes and fixes

--- a/views/login.html
+++ b/views/login.html
@@ -43,7 +43,7 @@
 					<legend>Log In</legend>
 					<div class="alert alert-danger alert" id="login_error_msg" style="display:none;">
 					</div>
-					<form id="login-form" accept-charset="utf-8">
+					<form id="login-form" method="POST" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" id="login-team" name="teaml" class="form-control" placeholder="Team Number" tabindex="1"></div>
 							<div class="form-group"><input type="password" id="login-password" name="passwordl" class="form-control" placeholder="Password" tabindex="1"></div>
@@ -63,7 +63,7 @@
 						<h4>Congrats!</h4>
 						You're registered! Go ahead and log in on your left.
 					</div>
-					<form id="register-form" accept-charset="utf-8">
+					<form id="register-form" method="POST" accept-charset="utf-8">
 						<fieldset class="signup-container" >
 							<div class="form-group"><input type="text" name="team" id="register-team" placeholder="Team Number" tabindex="1" class="form-control"></div>
 							<div class="form-group"><input type="password" name="password" id="register-password"placeholder="Password" tabindex="1" class="form-control"></div>
