--- a/views/clar.html
+++ b/views/clar.html
@@ -1,9 +1,12 @@
-<script src="http://localhost:8008/socket.io/socket.io.js"></script>
+
 <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script>
+	$.getScript('http://'+document.domain+':8008/socket.io/socket.io.js');
+</script>
 <input type="text" class="message">
 <button class="hey">Submit</button>
 <script>
-  var socket = io.connect('http://localhost:8008');
+  var socket = io.connect('http://'+document.domain+':8008');
   $(".hey").click(function(){
   	  socket.emit('clarification', {message: $(".message").val()});
   });
