--- a/views/home.html
+++ b/views/home.html
@@ -26,7 +26,7 @@
 	</div>
 	<div class="container main">
 		<div class="navbar" style="background:#f7f7f7 !important">
-			<a class="navbar-brand" href="/">THSCS 2013</a>
+			<a class="navbar-brand" href="/"><?=navbar_title?></a>
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="/submit">Submit</a></li>
