--- a/views/js.html
+++ b/views/js.html
@@ -3,7 +3,5 @@
 <script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
+<script src="http://<?php echo $_SERVER['SERVER_NAME']; ?>:8008/socket.io/socket.io.js"></script>
 <script src="/views/assets/js/app.js"></script>
-<script>
-	$.getScript('http://'+document.domain+':8008/socket.io/socket.io.js');
-</script>
