Added rudimentary compiling and judging for dry run problem.

--- a/views/submit.html
+++ b/views/submit.html
@@ -46,13 +46,13 @@
 								<div id="output_container" style="display:none;">
 									<legend>Results</legend>
 									<div class="alert alert-success" id="compile_success_alert" style="display:none">
-										<strong>Success - </strong>
+										<strong>Correct! </strong>
 									</div>
 									<div class="alert alert-danger" id="compile_danger_alert" style="display:none">
 										<strong>Error - </strong>
 									</div>
 									<legend id="error_divider"></legend>
-									<pre id="output" class="prettyprint linenums"></pre>
+									<!-- <pre id="output" class="prettyprint linenums"></pre> -->
 								</div>
 								<fieldset class="form-container" >
 									<div class="form-group">
