Added problems, modified judging

--- a/views/submit.html
+++ b/views/submit.html
@@ -77,7 +77,7 @@
 
 									<button type="button" class="btn btn-block btn-default" id="upload" tabindex="5" style="" data-loading-text="Uploading...">Upload</button>
 									<button type="button" class="btn btn-block btn-success" id="compile" tabindex="5" style="display:none" data-loading-text="Judging...">Judge</button>
-									<button type="button" class="btn btn-block btn-primary" id="resubmit" tabindex="5" style="display:none" data-loading-text="Resubmitting..." onClick="onCompileResubmit()">Resubmit</button>
+									<button type="button" class="btn btn-block btn-primary" id="resubmit" tabindex="5" style="display:none" data-loading-text="Going Back..." onClick="onCompileResubmit()">OK</button>
 								</fieldset>
 							</form>
 						</div>
