--- a/web/views/assets/css/app.css
+++ b/web/views/assets/css/app.css
@@ -40,7 +40,15 @@ h4 .fail {
 }
 .submission {
 }
-.noselect {
+.noselect_clar {
+	-moz-user-select: -moz-none;
+   	-khtml-user-select: none;
+   	-webkit-user-select: none;
+   	-o-user-select: none;
+   	user-select: none;
+   	cursor:pointer;
+}
+.noselect_sub {
 	-moz-user-select: -moz-none;
    	-khtml-user-select: none;
    	-webkit-user-select: none;
