--- a/web/views/submit.html
+++ b/web/views/submit.html
@@ -46,7 +46,7 @@
 								<div id="output_container" style="display:none;">
 									<legend>Results</legend>
 									<div class="alert alert-success" id="compile_success_alert" style="display:none">
-										<strong>Correct! </strong>
+										<strong>Success! </strong>Your program has been queued for submission. Once your program is judged, you'll see it in your submissions list.
 									</div>
 									<div class="alert alert-danger" id="compile_danger_alert" style="display:none">
 										<strong>Error - </strong>
@@ -118,25 +118,9 @@
 					<div class="row">
 						<div class="col-lg-12">
 							<legend>Submissions</legend>
-							<div class="well submission" id="I2J849">
-								<div class="noselect" style="width:100%;"><h4 style="display:inline">Run ID: <span class="run_id">I2J849</span><div class="success" style="float:right">Success</div></h4></div>
-								<div id="I2J849detail" class="detail" style="display:none">
-									<br>
-									<b>Ran for:</b> 1.13s<br>
-									<b>Submitted on:</b> 1/1/1 at 4:30 PM <br><br>
-									<legend></legend>
-									<a href="/submit/I2J849" class="btn btn-danger btn-small" disabled>Appeal</a>
-								</div>
-							</div>
-							<div class="well submission" id="L3IO45">
-								<div class="noselect" style="width:100%"><h4 style="display:inline">Run ID: <span class="run_id">L3IO45</span><div class="fail" style="float:right">Failed</div></h4></div>
-								<div id="L3IO45detail" class="detail" style="display:none">
-									<br>
-									<b>Ran for:</b> 3.18s<br>
-									<b>Submitted on:</b> 1/1/1 at 4:22 PM <br><br>
-									<legend></legend>
-									<a href="/submit/L3IO45" class="btn btn-danger btn-small" disabled>Appeal</a>									
-								</div>
+							<div id="sub_box">
+								<i style="color:#888;">No submissions here.</i>
+								<br><br>
 							</div>					
 						</div>
 					</div>
