--- a/web/views/js.html
+++ b/web/views/js.html
@@ -4,4 +4,5 @@
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
 <script src="http://<?php echo $_SERVER['SERVER_NAME']; ?>:8008/socket.io/socket.io.js"></script>
+<script src="/views/assets/js/parsley.js"></script>
 <script src="/views/assets/js/app.js"></script>
