--- a/web/views/login.html
+++ b/web/views/login.html
@@ -65,8 +65,8 @@
 					</div>
 					<form id="register-form" method="POST" accept-charset="utf-8">
 						<fieldset class="signup-container" >
-							<div class="form-group"><input type="text" name="team" id="register-team" placeholder="Team Number" tabindex="1" class="form-control"></div>
-							<div class="form-group"><input type="password" name="password" id="register-password"placeholder="Password" tabindex="1" class="form-control"></div>
+							<div class="form-group"><input type="text" name="team" id="register-team" placeholder="Team Number (must be a number)" tabindex="1" class="form-control"></div>
+							<div class="form-group"><input type="password" name="password" id="register-password"placeholder="Password (6 characters minimum)" tabindex="1" class="form-control"></div>
 							<div class="form-group"><legend></legend></div>
 							<div class="btn-group" data-toggle="buttons" style="margin-bottom: 15px;width:100%;">			
 								<label class="btn btn-success" style="width:50%;height:40px;">
