Final commit, this cleaned up version was used in production.

--- a/web/views/home.html
+++ b/web/views/home.html
@@ -31,6 +31,7 @@
 				<li class="active"><a href="/">Home</a></li>
 				<li><a href="/submit">Submit</a></li>
 				<li><a href="/scoreboard">Scoreboard</a></li>
+				<li><a href="/SAMPLE_DATA.zip">Sample Data</a></li>
 				<li><a href="/#helpbox">Help</a></li>
 			</ul>
 			<p class="navbar-text pull-right"><a href="/logout" style="text-decoration: none" class="navbar-link">Logout</a></p>
@@ -77,6 +78,15 @@
 							<div class="alert alert-info" style="">
 								<h4>Contest Info!</h4>
 								Every problem is worth 60 points, each incorrect submission deducts 5 points if the problem ends up solved. Maximum possible score is 720 points. Problems are judged by an automatic grader. Each submission is queued until it is time to be judged. At the end of the contest you will be allowed to see your output and the expected output - you can then appeal if something doesn't look right.
+								<br/><br/>
+								SAMPLE DATA PASSWORD: woodchuckcouldchuckwood
+							</div>
+							<div class="alert alert-info" style="">
+								<h4>Errata!</h4>
+								<ul>
+									<li>Eboola: ignore second part of assumption.</li>
+									<li>Palindromida: read only the specified number of lines.</li>
+								</ul>
 							</div>
 							
 							
