--- a/web/views/info.html
+++ b/web/views/info.html
@@ -17,7 +17,7 @@
 				<h3 class="panel-title">Programming Score</h3>
 			</div>
 			<div class="panel-body">
-				<div class="" id="time" style="font-size:72px;color:#468847;text-align:center">
+				<div class="" id="prog_score" style="font-size:72px;color:#468847;text-align:center">
 					0
 				</div>
 			</div>
