--- a/web/views/admin.html
+++ b/web/views/admin.html
@@ -8,6 +8,7 @@
 		<div class="row">
 			<div class="col-lg-12" style="">
 				<legend>Admin</legend>
+				<button type="button" id="refresh" class="btn btn-success">Refresh</button>
 				<div class="well section" style="">
 					<legend style="font-size:16px;font-weight:bold">Contest</legend>
 					<h5>Contest Status:</h5>
@@ -41,23 +42,23 @@
 					<div class="" id="clar_box"></div>
 										
 				</div>
+				<div class="well section" style="">
+					<legend style="font-size:16px;font-weight:bold">Appeals</legend>
+					<div class="" id="appeal_box"></div>
+										
+				</div>
 
 			</div>
 			
 		</div>
-	</div>
+	</div><!-- <script src="/views/assets/js/bootstrap.min.js"></script> -->
 <div style="margin:0 auto;width:960px;text-align:center;color:rgba(0,0,0,0.5);font-size:11px"><a href="https://github.com/anst/thscs-panel" style="color:rgba(0,0,0,0.5);text-decoration:none">Created by Andy Sturzu. Contributions by Jonathan Zong.</a></div>
-<script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
+<script src="/views/assets/js/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="/views/assets/js/bootstrap.min.js"></script>
+<script src="/views/assets/js/prettify.js"></script>
 <script src="http://<?php echo $_SERVER['SERVER_NAME']; ?>:8008/socket.io/socket.io.js"></script>
 <script>
 	var socket = io.connect('http://'+document.domain+':8008');
-	setInterval(function(){
-  		//$.getJSON( "/api/time", function(data) {
-		//	$("#time").html(data.time);
-		//});		
-	}, 1000);
 	$("#start").click(function() {
 		socket.emit('start_time',{key:getCookie('admin')});
 	});
@@ -77,12 +78,39 @@
 	socket.on('time_error', function(data) {
 		console.log(data.error);
 	});
+	socket.on('trigger_recalculate', function(data) {
+		socket.emit('recalculate',data.team);
+	});
 	function getCookie(name) {
 		var parts = document.cookie.split(name + "=");
 		if (parts.length == 2) return parts.pop().split(";").shift();
 	}
+	$('#refresh').click(function (){
+		socket.emit('refresh');
+	});
 	socket.emit('admin',{key:getCookie('admin')});
     socket.emit('get_admin_clars',{key:getCookie('admin')});
+    socket.emit('get_admin_appeals');
+    socket.on('admin_appeals',function (data) {
+    	socket.emit('get_admin_appeals');
+    });
+    socket.on('admin_appeals_list', function(data) {
+    	if(data.length!=0) 
+            $('#appeal_box').empty();
+        $.each(data, function(key, value) {
+            $('#appeal_box').append('<div class="well submission " id="sub'+value.subid+'"><div class="noselect_sub" style="width:100%;"><h4 style="display:inline">Problem #<span class="run_id">'+value.problem+'<span class="'+value.id+'appealsubid" id="'+value.subid+'"</span><div class="'+(value.success=="Yes"?"success":"fail")+'" style="float:right">'+(value.success=="No"?value.error=="None"?"Incorrect":value.error:"Success")+'</div></h4></div><div id="sub'+value.subid+'detail" class="detail" style="display:none"><br><div class="row"><div class="col-lg-6"><legend style="font-size:16px">Their Output:</legend><pre id="sub'+value.subid+'toutput">'+(value.output==""?"Not available yet, contest is still running.":value.output)+'</pre></div><div class="col-lg-6"><legend style="font-size:16px">Judge\'s Output:</legend><pre id="sub'+value.subid+'routput">'+(value.real_output==""?"Not available yet, contest is still running.":value.real_output)+'</pre></div></div><br><legend></legend><button type="button" id="'+value.id+'appeal" class="accept_appeal btn btn-success btn-sm">Accept</button>&nbsp;&nbsp;&nbsp;<button type="button" id="'+value.id+'appeal" class="deny_appeal btn btn-danger btn-sm">Deny</button></div><span class="'+value.id+'appealteam" id="'+value.team+'">');
+        });
+        $(".noselect_sub").click(function() {
+            var a = "#"+$(this).parent().attr('id')+"detail";
+            $(a).toggle();
+        });
+        $(".accept_appeal").click(function() {
+        	socket.emit('accept_appeal',{key:getCookie('admin'),id:$("."+$(this).attr('id')+"subid").attr('id'),team:$("."+$(this).attr('id')+"team").attr('id')});
+	    });
+	    $(".deny_appeal").click(function() {
+        	socket.emit('deny_appeal',{key:getCookie('admin'),id:$("."+$(this).attr('id')+"subid").attr('id'),team:$("."+$(this).attr('id')+"team").attr('id')});
+	    });
+    });
     socket.on('admin_clarifications', function(data){
         if(data.length!=0) 
             $('#clar_box').empty();
@@ -102,7 +130,8 @@
 	    });
     });
     socket.on('soft_refresh', function (d) {
-        socket.emit('get_admin_clars',{key:getCookie('admin')});
+        //socket.emit('get_admin_clars',{key:getCookie('admin')});
+        //socket.emit('get_admin_appeals');
     });
 	function nl2br (str, is_xhtml) {
     	var breakTag = (is_xhtml || typeof is_xhtml === 'undefined') ? '<br ' + '/>' : '<br>';
@@ -111,6 +140,7 @@
 	function msToTime(duration) {
 	    var milliseconds = parseInt((duration%1000)/100), seconds = parseInt((duration/1000)%60), minutes = parseInt((duration/(1000*60))%60), hours = parseInt((duration/(1000*60*60))%24);hours = (hours < 10) ? "" + hours : hours;minutes = (minutes < 10) ? "0" + minutes : minutes;seconds = (seconds < 10) ? "0" + seconds : seconds;return hours + ":" + minutes + ":" + seconds;
 	}
+
 </script>
 </body>
 </html>
