--- a/web/views/head.html
+++ b/web/views/head.html
@@ -1,4 +1,4 @@
 <title><?=title?></title>
 <!-- <link rel="stylesheet" href="/views/assets/css/bootstrap.min.css"> -->
-<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
+<link href="/views/assets/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/views/assets/css/app.css">
