--- a/web/views/js.html
+++ b/web/views/js.html
@@ -1,8 +1,8 @@
 <!-- <script src="/views/assets/js/bootstrap.min.js"></script> -->
 <div style="margin:0 auto;width:960px;text-align:center;color:rgba(0,0,0,0.5);font-size:11px"><a href="https://github.com/anst/thscs-panel" style="color:rgba(0,0,0,0.5);text-decoration:none">Created by Andy Sturzu. Contributions by Jonathan Zong.</a></div>
-<script src="http://code.jquery.com/jquery-2.0.3.min.js" type="text/javascript"></script>
-<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/prettify.js"></script>
+<script src="/views/assets/js/jquery-2.0.3.min.js" type="text/javascript"></script>
+<script src="/views/assets/js/bootstrap.min.js"></script>
+<script src="/views/assets/js/prettify.js"></script>
 <script src="http://<?php echo $_SERVER['SERVER_NAME']; ?>:8008/socket.io/socket.io.js"></script>
 <script src="/views/assets/js/parsley.js"></script>
 <script src="/views/assets/js/app.js"></script>
